[package]
name = "rs_infras"
version = "0.2.0"
edition = "2021"
authors = ["daheige"]
description = "rust infras"
keywords = ["infras", "rs-infras", "mysql","redis","pulsar"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/rs-god/rs-infras"
documentation = "https://docs.rs/rs-infras/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio-comp for tokio async support
redis = { version ="0.23.1",features = ["r2d2","tokio-comp","cluster","cluster-async","json"]}
r2d2 = "0.8.10"
sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls" , "mysql","chrono"] }
tokio = { version = "1.30.0", features = ["full"] }
futures = "0.3.28"
chrono = "0.4.26"

# pulsar
pulsar = "6.0.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"

#serde yaml for config read
serde_yaml = "0.9.25"
