[package]
name = "rs_infras"
version = "0.2.2"
edition = "2021"
authors = ["daheige"]
description = "rust infras"
keywords = ["infras", "rs-infras", "mysql","redis","pulsar"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/rs-god/rs-infras"
documentation = "https://docs.rs/rs-infras/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio-comp for tokio async support
redis = { version ="0.24.0",features = ["r2d2","tokio-comp","cluster","cluster-async","json"]}
r2d2 = "0.8.10"
sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls" , "mysql","chrono"] }
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
chrono = "0.4.33"

# pulsar
pulsar = "6.1.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

#serde yaml for config read
serde_yaml = "0.9.30"
