[package]
name = "rs_infras"
version = "0.3.1"
edition = "2024"
authors = ["daheige"]
description = "rust infras"
keywords = ["infras", "rs-infras", "mysql","redis","pulsar"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/rs-god/rs-infras"
documentation = "https://docs.rs/rs-infras/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# redis use tokio async
redis = { version = "0.32.7", features = ["r2d2", "tokio-comp", "cluster","cluster-async", "json"] }
r2d2 = "0.8.10"

sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "chrono", "time"] }

tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
chrono = "0.4.42"

# pulsar
pulsar = "6.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# serde yaml for config read
serde_yaml = "0.9.33"

# crypto
aes = "0.8.4"
cbc = "0.1.2"
rand = "0.9.2"
base64 = "0.22.1"

log = "0.4.28"
env_logger = { version = "0.11.8", features = ["color"] }

# autometrics-rs for auto prometheus metrics sla
autometrics = { version = "3.0.0", features = ["prometheus-exporter"] }
axum = { version = "0.8.6" }
